# refast

./: .gitignore  COMPONENT_CLEANUP_SUBAGENT_INSTRUCTIONS.md  README.md  hatch_build.py  pyproject.toml
.agents/: AGENTS.md
.copilot/skills/create-refast-app/: 01-core-setup.md  02-components-layout.md  03-events-callbacks.md  04-streaming-advanced.md  05-navigation-structure.md  SKILL.md
.github/: copilot-instructions.md
.github/workflows/: python-publish.yml  python-pytest.yml
docs/: ARCHITECTURE_IMPROVEMENTS.md  COMPONENT_DEVELOPMENT.md  EXTENSION_DEVELOPMENT.md  NAMING_CONVENTIONS.md  PROP_STORE_GUIDE.md  STREAMING_GUIDE.md  STYLE_COMPONENTS_LIST.md  STYLING_GUIDE.md  TAILWIND_SUPPORT.md
docs_site/: AGENT_INSTRUCTIONS.md  Dockerfile  README.md  SUBAGENT_PROMPT_TEMPLATE.md  TODO.md  __init__.py  app.py
docs_site/pages/: __init__.py  home.py  utils.py
docs_site/styles/: main.css
examples/: debug_showcase.py  desktop_app.py  desktop_notifications.py  headless_core.py  hello.py  longrunning.py  refresh_counter.py  test_update_prop_value.py  todoapp.py  typed_events.py
examples/aichat/: app.py
examples/all_inputs_form/: README.md  app.py
examples/analytics_dashboard/: app.py
examples/basic/: README.md  app.py
examples/bound_overlays/: app.py
examples/charts_showcase/: app.py
examples/chat_app/: app.py
examples/collapsible_stream/: app.py
examples/colors_showcase/: README.md  app.py
examples/component_refresh/: app.py
examples/component_showcase/: README.md  app.py
examples/connection_status/: README.md  app.py
examples/core_static/: custom_button.js
examples/dashboard/: app.py
examples/data_table/: README.md  app.py
examples/ecommerce_product/: README.md  app.py
examples/file_manager/: README.md  app.py
examples/file_transfer/: app.py
examples/form_validation/: README.md  app.py
examples/input_features/: README.md  app.py
examples/js_callbacks/: README.md  app.py
examples/kanban_board/: README.md  app.py
examples/lazy_loading/: README.md  app.py
examples/markdown_custom_tags/: app.py
examples/markdown_features/: app.py
examples/multi_page/: README.md  app.py
examples/navigation_showcase/: README.md  app.py
examples/prop_store/: README.md  app.py
examples/realtime_dashboard/: README.md  app.py
examples/resizable_panels/: app.py
examples/rich_table/: app.py
examples/scroll_stream/: app.py
examples/settings_panel/: README.md  app.py
examples/sidebar_showcase/: README.md  app.py
examples/sketch_canvas/: app.py
examples/streaming/: app.py
examples/theme_showcase/: README.md  app.py  theme_util.py
examples/toast_showcase/: README.md  app.py
examples/todo_app/: app.py
examples/url_params/: app.py
examples/weather_dashboard/: README.md  app.py
plan/: README.md  plan-refastExtensionSystem.prompt.md  refast-full-integration.md  stage-1-core.md  stage-2-components.md  stage-6-frontend.md  stage-8-docs.md
plan/completed/: stage-1-core.md  stage-10-charts.md  stage-3-events.md  stage-4-sessions.md  stage-5-security.md  stage-7-integration.md  stage-9-shadcn-components.md
scripts/: build.py
src/refast/: __init__.py  app.py  assets.py  context.py  router.py  state.py  store.py
src/refast-client/: package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
tests/: __init__.py  conftest.py
tests/e2e/: package-lock.json  package.json  playwright.config.ts
tests/integration/: __init__.py  test_fastapi_integration.py  test_file_upload.py  test_full_flow.py  test_static_assets.py  test_theme_runtime.py  test_websocket.py
tests/unit/: __init__.py  test_app.py  test_broadcast.py  test_bundle_optimization.py  test_button_card.py  test_charts.py  test_components.py  test_context.py  test_context_refresh.py  test_controls.py  test_csp.py  test_csrf.py  test_data_display.py  test_desktop_notification.py  test_event_manager.py  test_event_types.py  test_extensions.py  test_feedback.py  test_file_uploader.py  test_form.py  test_init.py  test_input.py  test_layout.py  test_markdown_tags.py  test_memory_store.py  test_message_validation.py  test_navigation.py  test_overlay.py  test_rate_limit.py  test_registry.py  test_router.py  test_sanitizer.py  test_security_middleware.py  test_session.py  test_session_middleware.py  test_slot.py  test_state.py  test_store.py  test_stream.py  test_style_kwargs_explicit.py  (+6 more)
(+297 files in other folders)
