[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refast"
version = "0.0.5"
description = "Python + React UI framework for building reactive web applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Najeem Muhammed", email = "najeem@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.hooks.custom]
# Uses hatch_build.py at project root — builds the React frontend
# and copies JS + CSS bundles into src/refast/static/

[tool.hatch.build.targets.wheel]
# Include the generated JS/CSS even though they are .gitignored
artifacts = [
    "src/refast/static/refast-client.js",
    "src/refast/static/refast-client.css",
]

[tool.hatch.build.targets.sdist]
artifacts = [
    "src/refast/static/refast-client.js",
    "src/refast/static/refast-client.css",
]
# Include the frontend source so sdist consumers can rebuild
include = [
    "src/",
    "hatch_build.py",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "src/refast/static/**/*.d.ts",
    "src/refast/static/**/__tests__/",
    "src/refast/static/**/test/",
    "src/refast-client/node_modules/",
    "src/refast-client/coverage/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
